<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="inv_app_name">iNavi Maps Demo</string>
    <string name="inv_category">category</string>

    <!-- 지도 -->
    <string name="inv_category_map">지도</string>

    <string name="inv_name_map_fragment">InvMapFragment</string>
    <string name="inv_description_map_fragment">MapFragment를 사용하여 지도 표출</string>

    <string name="inv_name_map_view">InvMapView</string>
    <string name="inv_description_map_view">레이아웃에 InvMapView를 추가하여 지도 표출</string>

    <string name="inv_map_type_normal">Normal</string>
    <string name="inv_map_type_hybrid">Hybrid</string>
    <string name="inv_map_type_satellite">Satellite</string>

    <!-- 셰이프 -->
    <string name="inv_category_shapes">셰이프</string>

    <string name="inv_name_marker">InvMarker</string>
    <string name="inv_description_marker">마커</string>

    <string name="inv_remove_marker">모든 마커 삭제</string>
    <string name="inv_remove_polygon">모든 다각형 삭제</string>
    <string name="inv_remove_polyline">모든 선형 삭제</string>
    <string name="inv_remove_circle">모든 원 삭제</string>

    <string name="inv_name_marker_overlap">InvMarker Overlap</string>
    <string name="inv_description_marker_overlap">마커 겹침 발생 시 정책 설정</string>
    <string name="inv_option_allow_overlap_markers">마커 겹침 허용</string>
    <string name="inv_option_allow_overlap_title">타이틀 겹침 허용</string>
    <string name="inv_option_allow_overlap_symbols">지도 심벌 겹침 허용</string>
    <string name="inv_option_animation_enabled">마커에 Fade 애니메이션 적용</string>

    <string name="inv_name_info_window">InvInfoWindow</string>
    <string name="inv_description_info_window">정보 창</string>
    <string name="inv_format_info_window_on_marker">마커 : %s</string>
    <string name="inv_format_info_window_on_map">좌표 : (%1$.5f, %2$.5f)</string>
    <string name="inv_format_custom_info_window_on_map">(%1$.5f, %2$.5f)</string>
    <string name="inv_option_use_custom_info_window_adapter">정보 창에 Custom View 사용</string>
    <string name="inv_content_description_icon">아이콘</string>

    <string name="inv_name_polygon">InvPolygon</string>
    <string name="inv_description_polygon">다각형 그리기</string>

    <string name="inv_name_polyline">InvPolyline</string>
    <string name="inv_description_polyline">선형 그리기</string>

    <string name="inv_name_route">InvRoute</string>
    <string name="inv_description_route">경로 그리기</string>

    <string name="inv_text_route_pass_progress">진행률 : </string>
    <string name="inv_text_route_pass_progress_value">0%</string>
    <string name="inv_text_route_pass_show">마커 표출</string>
    <string name="inv_text_route_pass_flat">플랫 마커</string>

    <string name="inv_name_circle">InvCircle</string>
    <string name="inv_description_circle">원 그리기</string>

    <string name="inv_name_global_z_index">Global Z-Index</string>
    <string name="inv_description_global_z_index">셰이프 표출 우선순위 설정</string>
    <string name="inv_option_polyline_under_circle">선형을 원 뒤에 표출</string>

    <!-- 클러스터링 -->
    <string name="inv_category_clustering">클러스터링</string>

    <string name="inv_name_marker_clustering">Marker Clustering</string>
    <string name="inv_description_marker_clustering">마커 클러스터링</string>
    <string name="inv_format_cluster_click">클러스터 클릭\n위치 : (%1$.5f, %2$.5f)\n포함된 아이템 개수 : %3$d개</string>
    <string name="inv_format_cluster_item_click">아이템 클릭\n위치 : (%1$.5f, %2$.5f)\n번호 : %3$d</string>

    <!-- 카메라 -->
    <string name="inv_category_camera">카메라</string>

    <string name="inv_name_camera_move">Camera Move</string>
    <string name="inv_description_camera_move">카메라 이동</string>
    <string name="inv_text_animation_type">애니메이션 : </string>
    <string-array name="inv_option_array_animation_type">
        <item>None</item>
        <item>Linear</item>
        <item>Easing</item>
        <item>Fly</item>
    </string-array>
    <string name="inv_text_move_camera">카메라 이동</string>

    <string name="inv_name_camera_update_builder">CameraUpdateBuilder</string>
    <string name="inv_description_camera_update_builder">CameraUpdateBuilder를 이용한 카메라 이동</string>
    <string name="inv_option_camera_update_target">위치 변경</string>
    <string name="inv_option_camera_update_zoom">줌 변경</string>
    <string name="inv_option_camera_update_tilt">기울기 변경</string>
    <string name="inv_option_camera_update_bearing">베어링 변경</string>

    <string name="inv_name_camera_fit_bounds">Camera Move to Fit Bounds</string>
    <string name="inv_description_camera_fit_bounds">영역이 보이는 위치로 카메라 이동</string>

    <string name="inv_name_camera_events">Camera Events</string>
    <string name="inv_description_camera_events">카메라 이벤트</string>
    <string name="inv_format_camera_info">상태 : %1$s\n위치 : (%2$.5f, %3$.5f)\n줌 레벨 : %4$.2f\n기울기 : %5$.2f\n베어링 : %6$.2f</string>
    <string name="inv_toast_camera_update_finished">카메라 이동 완료</string>
    <string name="inv_toast_camera_update_cancelled">카메라 이동 취소</string>

    <!-- 클릭 -->
    <string name="inv_category_event">클릭 이벤트</string>
    <string name="inv_name_event_click_map">Map Click</string>
    <string name="inv_description_event_click_map">지도의 클릭, 롱 클릭, 더블 클릭 이벤트 처리</string>

    <string name="inv_event_map_click_listener_enabled">클릭 이벤트 사용</string>
    <string name="inv_event_map_long_click_listener_enabled">롱 클릭 이벤트 사용</string>
    <string name="inv_event_map_double_click_listener_enabled">더블 클릭 이벤트 사용</string>
    <string name="inv_event_map_consume_double_click_event">더블 클릭 이벤트 소비</string>
    <string name="inv_format_event_map_click">지도 %1$s\n화면 : (%2$.0f, %3$.0f)\n지도 : (%4$.5f, %5$.5f)</string>

    <string name="inv_name_event_click_shape">Shape Click</string>
    <string name="inv_description_event_click_shape">셰이프의 클릭 이벤트 처리</string>
    <string name="inv_event_shape_click_listener_enabled">클릭 이벤트 사용</string>
    <string name="inv_event_shape_consume_click_event">클릭 이벤트 소비</string>

    <!-- 지도옵션 -->
    <string name="inv_name_map_type">Map Type</string>
    <string name="inv_description_map_type">지도 타입</string>
    <string name="inv_text_map_type">지도 타입 : </string>
    <string name="inv_text_normal_map">일반 지도</string>
    <string name="inv_text_satellite_map">항공 지도</string>
    <string name="inv_text_hybrid_map">하이브리드 지도</string>

    <string name="inv_name_map_custom_style">Map Custom Style</string>
    <string name="inv_description_map_custom_style">지도 커스텀 스타일</string>
    <string name="inv_text_map_style">지도 스타일 : </string>
    <string name="inv_text_no_custom_style">커스텀 지도 스타일이 없습니다.</string>
    <string name="inv_text_default_style">기본 스타일</string>

    <string name="inv_category_map_option">지도 옵션</string>
    <string name="inv_name_map_option_padding">Map Padding</string>
    <string name="inv_description_map_option_padding">지도 패딩 설정</string>
    <string name="inv_option_apply_padding">패딩 적용</string>

    <string name="inv_name_map_option_gesture">Map Gesture</string>
    <string name="inv_description_map_option_gesture">지도 제스처 설정</string>
    <string name="inv_option_enabled_scroll">스크롤</string>
    <string name="inv_option_enabled_zoom">줌</string>
    <string name="inv_option_enabled_tilt">기울기</string>
    <string name="inv_option_enabled_bearing">회전</string>
    <string name="inv_option_focal_center">지도 중심 기준</string>

    <string name="inv_name_map_option_controller">Map Controller</string>
    <string name="inv_description_map_option_controller">지도 컨트롤러 설정</string>
    <string name="inv_option_compass">나침반</string>
    <string name="inv_option_scale_bar">축척 바</string>
    <string name="inv_option_zoom">줌 컨트롤러</string>
    <string name="inv_option_cur_location">현위치 버튼</string>

    <!-- 지도 제한 -->
    <string name="inv_name_map_option_restriction">Map Restriction</string>
    <string name="inv_description_map_option_restriction_map">지도 제한</string>
    <string name="inv_option_apply_restriction">지도 제한</string>

    <!-- 심벌 크기 -->
    <string name="inv_name_map_option_symbol_scale">Map Symbol Scale</string>
    <string name="inv_description_map_option_symbol_scale">지도 심벌 크기</string>
    <string name="inv_option_apply_symbol_scale">심벌 크게</string>

    <!-- 위치 -->
    <string name="inv_category_location">위치</string>
    <string name="inv_name_location_tracking_mode">User Tracking Mode</string>
    <string name="inv_description_location_tracking_mode">위치 추적 모드 사용</string>
    <string name="inv_text_location_tracking_mode">위치 추적 모드 : </string>
    <string-array name="inv_option_array_location_tracking_mode">
        <item>None</item>
        <item>NoTracking</item>
        <item>Tracking</item>
        <item>TrackingCompass</item>
    </string-array>
    <string name="inv_text_popup_location_permission_denied">현재 위치를 확인하려면 설정에서 위치 권한을 허용해주세요.</string>
    <string name="inv_text_popup_settings">설정</string>
    <string name="inv_text_popup_ok">확인</string>

    <string name="inv_name_location_icon">Location Icon</string>
    <string name="inv_description_location_icon">위치 아이콘 설정</string>
    <string name="inv_toast_location_icon_click">위치 아이콘 클릭됨</string>
    <string name="inv_text_location_icon_bearing">베어링 : </string>
    <string name="inv_text_location_icon_bearing_value">0°</string>
    <string name="inv_format_location_icon_bearing_value">%d°</string>
    <string name="inv_option_location_icon_visible">위치 아이콘 표출</string>
    <string name="inv_option_location_icon_image">아이콘 이미지 변경</string>
    <string name="inv_option_location_icon_scale">아이콘 크기 변경</string>
    <string name="inv_option_location_icon_circle_radius">원 반경 변경</string>
    <string name="inv_option_location_icon_circle_color">원 색상 변경</string>

    <!-- 기타 -->
    <string name="inv_category_misc">기타</string>
    <string name="inv_name_misc_projection">Projection</string>
    <string name="inv_description_misc_projection">화면상 위치를 지도 좌표로 변환</string>
    <string name="inv_text_misc_projection_coords_screen">화면상 좌표 : </string>
    <string name="inv_text_misc_projection_coords_map">지도상 좌표 :</string>
    <string name="inv_format_misc_projection_coords_screen">(%1$.0f, %2$.0f)</string>
    <string name="inv_format_misc_projection_coords_map">(%1$.5f, %2$.5f)</string>

    <!-- 좌표계 변환 -->
    <string name="inv_name_misc_coordinates_conversion">Coordinates Conversion</string>
    <string name="inv_description_misc_coordinates_conversion">좌표계 변환</string>
    <string name="inv_text_misc_coordinates_wgs84">WGS84 좌표</string>
    <string name="inv_coordinates_conversion">좌표 변환</string>
    <string name="inv_format_misc_coordinates_wgs84">(%1$.5f, %2$.5f)</string>

    <!-- Pick POIs -->
    <string name="inv_name_misc_pick_poi">Pick POIs</string>
    <string name="inv_description_misc_pick_poi">특정 화면 영역에 표출되는 POI의 정보를 확인한다.</string>
    <string name="inv_text_poi_info">name: %1$s, POI ID: %2$d</string>
    <string name="inv_text_no_poi">선택된 POI가 없습니다.</string>

</resources>