<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/map_fragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/options"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:flexWrap="wrap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/map_fragment">

        <CheckedTextView
            android:id="@+id/option_visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:checked="true"
            android:drawableStart="?android:attr/listChoiceIndicatorMultiple"
            android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"
            android:gravity="center_vertical"
            android:text="@string/inv_option_location_icon_visible" />

        <CheckedTextView
            android:id="@+id/option_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:checked="false"
            android:drawableStart="?android:attr/listChoiceIndicatorMultiple"
            android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"
            android:gravity="center_vertical"
            android:text="@string/inv_option_location_icon_image" />

        <CheckedTextView
            android:id="@+id/option_scale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:checked="false"
            android:drawableStart="?android:attr/listChoiceIndicatorMultiple"
            android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"
            android:gravity="center_vertical"
            android:text="@string/inv_option_location_icon_scale" />

        <CheckedTextView
            android:id="@+id/option_circle_radius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:checked="false"
            android:drawableStart="?android:attr/listChoiceIndicatorMultiple"
            android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"
            android:gravity="center_vertical"
            android:text="@string/inv_option_location_icon_circle_radius" />

        <CheckedTextView
            android:id="@+id/option_circle_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:checked="false"
            android:drawableStart="?android:attr/listChoiceIndicatorMultiple"
            android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"
            android:gravity="center_vertical"
            android:text="@string/inv_option_location_icon_circle_color" />

        <LinearLayout
            android:id="@+id/option_bearing"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/map_fragment"
            app:layout_wrapBefore="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/inv_text_location_icon_bearing"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16dp" />

            <SeekBar
                android:id="@+id/seekbar_bearing"
                android:layout_width="0dp"
                android:layout_height="26dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:max="360"
                android:progress="0" />

            <TextView
                android:id="@+id/tv_bearing_value"
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/inv_text_location_icon_bearing_value"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16dp" />

        </LinearLayout>

    </com.google.android.flexbox.FlexboxLayout>

</android.support.constraint.ConstraintLayout>
