<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/map_fragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="@id/options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/options"
        app:layout_constraintTop_toTopOf="@id/options"
        tools:ignore="RtlHardcoded">

        <Button
            android:id="@+id/start_camera_move"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/inv_text_move_camera"
            android:textSize="16dp" />

    </RelativeLayout>

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/options"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:flexWrap="wrap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttons"
        app:layout_constraintStart_toStartOf="parent">

        <CheckedTextView
            android:id="@+id/camera_update_target"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:checked="false"
            android:drawableStart="?android:attr/listChoiceIndicatorMultiple"
            android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"
            android:gravity="center_vertical"
            android:text="@string/inv_option_camera_update_target" />

        <CheckedTextView
            android:id="@+id/camera_update_zoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:checked="true"
            android:drawableStart="?android:attr/listChoiceIndicatorMultiple"
            android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"
            android:gravity="center_vertical"
            android:text="@string/inv_option_camera_update_zoom" />

        <CheckedTextView
            android:id="@+id/camera_update_tilt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:checked="true"
            android:drawableStart="?android:attr/listChoiceIndicatorMultiple"
            android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"
            android:gravity="center_vertical"
            android:text="@string/inv_option_camera_update_tilt" />

        <CheckedTextView
            android:id="@+id/camera_update_bearing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:checked="true"
            android:drawableStart="?android:attr/listChoiceIndicatorMultiple"
            android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"
            android:gravity="center_vertical"
            android:text="@string/inv_option_camera_update_bearing" />

    </com.google.android.flexbox.FlexboxLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
