<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/map_fragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:flexWrap="wrap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <CheckedTextView
            android:id="@+id/chk_gesture_enabled_scroll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:checked="true"
            android:drawableStart="?android:attr/listChoiceIndicatorMultiple"
            android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"
            android:gravity="center_vertical"
            android:text="@string/inv_option_enabled_scroll" />

        <CheckedTextView
            android:id="@+id/chk_gesture_enabled_zoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:checked="true"
            android:drawableStart="?android:attr/listChoiceIndicatorMultiple"
            android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"
            android:gravity="center_vertical"
            android:text="@string/inv_option_enabled_zoom" />

        <CheckedTextView
            android:id="@+id/chk_gesture_enabled_tilt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:checked="true"
            android:drawableStart="?android:attr/listChoiceIndicatorMultiple"
            android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"
            android:gravity="center_vertical"
            android:text="@string/inv_option_enabled_tilt" />

        <CheckedTextView
            android:id="@+id/chk_gesture_enabled_rotate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:checked="true"
            android:drawableStart="?android:attr/listChoiceIndicatorMultiple"
            android:drawableLeft="?android:attr/listChoiceIndicatorMultiple"
            android:gravity="center_vertical"
            android:text="@string/inv_option_enabled_bearing" />

    </com.google.android.flexbox.FlexboxLayout>

</android.support.constraint.ConstraintLayout>
